# cv_improver

./: .env.example  .gitignore  README.md  interview_materials.md  main.py  pyproject.toml  tailored_resume.md
example/: job_link.md  other_infor.md  personal_writeup.md  resume.md
src/api/: routes.py
src/cv_improver/: crew.py  main.py
src/cv_improver/config/: agents.yaml  tasks.yaml
src/services/: resume_service.py
static/: example_resume.md
static/css/: styles.css
static/js/: main.js
templates/: base.html  index.html  results.html
